refactor: add logging to OpenRouteServiceAgent and fix GeoCoord field order